--- a/src/index.css
+++ b/src/index.css
@@ -42,6 +42,7 @@ footer {
   font-size: 12px;
   /* height: 125px; */
   padding: 4px;
+  margin: 4px;
 }
 
 .placeholder-card {
@@ -89,8 +90,23 @@ footer {
 
 .exp-bar-container {
   display: flex;
-  width: 100%;
-  height: 5px;
+  height: 8px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: -5px;
+  width: 66%;
+  z-index: 1;
+}
+
+.exp-bar-container-vertical {
+  display: flex;
+  flex-direction: column;
+  margin-top: auto;
+  margin-bottom: auto;
+  margin-right: -4px;
+  height: 50px;
+  width: 8px;
+  z-index: 1;
 }
 
 .exp-bar {
@@ -107,17 +123,46 @@ footer {
 .if-card {
   align-items: start;
   color: goldenrod;
+  flex-direction: column;
 }
 
-.if-range-bars {
-  border: 2px dashed goldenrod;
+.if-details-container {
+  border-left: 2px dashed goldenrod;
   display: flex;
   flex-direction: column;
   flex-grow: 1;
-  padding: 4px 8px;
+  padding: 4px 4px 4px 8px;
+  width: 100%
+}
+
+.if-cards-container {
+  border: 1px dashed goldenrod;
+  flex-grow: 1;
+  min-height: 75px;
+  padding-left: 2px;
+}
+
+.solid-border {
+  border-style: solid;
+}
+
+.if-condition-temp {
+  display: flex;
+  flex-direction: row;
+  flex-grow: 1;
+}
+
+.if-range-bars {
+  border-top: 2px solid goldenrod;
+  width: 100%;
 }
 
 .if-condition-container {
-  min-height: 100px;
-  flex-grow: 1;
+  display: flex;
+  /* flex-grow: 1; */
+}
+
+.empty-if-condition-slot {
+  border-top: 1px dashed goldenrod;
+  height: 90px;
 }
