--- a/src/index.css
+++ b/src/index.css
@@ -41,26 +41,52 @@ footer {
   flex: 1;
   font-size: 12px;
   /* height: 125px; */
-  padding: 4px;
+  /* padding: 4px; */
   margin: 4px;
 }
 
 .placeholder-card {
   border: dashed lightgray;
-  width: 75px;
+  background: lightgray;
+  width: 5px;
 }
 
-.character-bench, .character-card {
+.command-bench {
+  padding-bottom: 0px;
+  min-height: 75px;
+}
+
+.discard-bench {
+  border: 1px dashed red;
+  width: 150px;
+  height: 150px;
+}
+
+.command-card {
+  border: solid goldenrod;
+}
+
+.character-bench {
+
+}
+
+.character-card {
   border: solid blue;
 }
 
-.routine-bench, .routine-card {
+.routine-bench {
+
+}
+
+.routine-card {
   border: solid green;
 }
 
 .menu {
+  box-shadow: none;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
+  padding: 0px;
 }
 
 .empty-slot {
@@ -71,13 +97,26 @@ footer {
   justify-content: center;
 }
 
+.empty-slot.routine-card {
+  border-color: green;
+}
+
+.empty-slot.character-card {
+  border-color: blue;
+}
+
+.empty-slot.command-card {
+  border-color: goldenrod;
+  margin: 4px 0;
+}
+
 .card-icon {
   border-radius: 0px;
   display: flex;
-  height: 50px;
+  height: 40px;
   justify-content: center;
   margin: auto;
-  width: 50px;
+  width: 40px;
 }
 
 
@@ -87,13 +126,23 @@ footer {
   justify-content: space-around;
 }
 
+.command-exp-bar-container {
+  display: flex;
+  height: 8px;
+  width: 50%;
+  z-index: 1;
+  position: absolute;
+  bottom: -6px;
+  left: 25px;
+}
+
 .exp-bar-container {
   display: flex;
   height: 8px;
   margin-left: auto;
   margin-right: auto;
-  margin-top: -5px;
-  width: 66%;
+  /* margin-top: -5px; */
+  width: 50%;
   z-index: 1;
 }
 
@@ -122,16 +171,15 @@ footer {
 .if-card {
   align-items: start;
   color: goldenrod;
+  border: 2px solid goldenrod;
   flex-direction: column;
+  position: relative;
+  margin: 4px 0;
 }
 
 .if-details-container {
-  border-left: 2px dashed goldenrod;
-  display: flex;
-  flex-direction: column;
-  flex-grow: 1;
-  padding: 4px 4px 4px 8px;
-  width: 100%
+  padding: 4px 4px 12px 4px;
+  width: 100%;
 }
 
 .if-cards-container {
@@ -151,9 +199,24 @@ footer {
   flex-grow: 1;
 }
 
-.if-range-bars {
-  border-top: 2px solid goldenrod;
+.loop-range-bars {
+  border: 4px dashed rgba(204, 220, 22, 0.753);
+  border-bottom: none;
   width: 100%;
+  position: absolute;
+  height: 50px;
+  bottom: -50px;
+}
+
+
+.if-range-bars {
+  border: 4px dashed rgba(220, 158, 22, 0.753);
+  border-bottom: none;
+  width: 100%;
+  position: absolute;
+  height: 50px;
+  left: -2px;
+  bottom: -50px;
 }
 
 .if-condition-container {
@@ -164,4 +227,21 @@ footer {
 .empty-if-condition-slot {
   border-top: 1px dashed goldenrod;
   height: 90px;
+}
+
+
+.command-border-color-0 {
+  border-color: #CBB400BB;
+}
+.command-border-color-1 {
+  border-color: #AC004BBB;
+}
+.command-border-color-2 {
+  border-color: #37058ABB;
+}
+.command-border-color-3 {
+  border-color: #CB3F00BB;
+}
+.command-border-color-4 {
+  border-color: #008955BB;
 }
