--- a/src/index.css
+++ b/src/index.css
@@ -194,13 +194,20 @@ footer {
   color: goldenrod;
   border: 2px solid goldenrod;
   flex-direction: column;
-  position: relative;
   margin: 4px 0;
+  position: relative;
+  padding: 0px 4px;
 }
 
 .if-details-container {
   padding: 4px 4px 12px 4px;
   width: 100%;
+}
+
+.if-condition-toggle {
+  display: flex;
+  font-size: 14px;
+  justify-content: space-around;
 }
 
 .if-cards-container {
@@ -268,8 +275,9 @@ footer {
 }
 
 @keyframes blink { 
+  0% { border-width: 1px; border-style: solid; } 
   50% { border-width: 2px; border-style: dashed; } 
 }
 .combined-hover { /*or other element you want*/
-   animation: blink .5s step-end infinite alternate;
+   animation: blink .3s step-end infinite alternate;
 }
